--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ h1,h3,h4
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 	<title>Valet Parking </title>
 </head>
-<body onload="add();">
+<body onload="add()">
 
 <center>
 <h1>Valet Parking</h1>
@@ -37,7 +37,7 @@ h1,h3,h4
 </h4>
 
 	<!--- Create Canvas--->
-<canvas id="myCanvas" width="800" height="400"
+<canvas id="myCanvas" width="800" height="400"></canvas>
 
 </center>
 <script src="main.js">
